@@ -1,3 +1,12 @@
+2013-03-26  Sebastian Huber <sebastian.huber@embedded-brains.de>
+
+	* libc/stdio/local.h (_STDIO_WITH_THREAD_CANCELLATION_SUPPORT):
+	New define.
+	* libc/stdio/fclose.c: Use
+	_STDIO_WITH_THREAD_CANCELLATION_SUPPORT.
+	* libc/stdio/freopen.c: Likewise.
+	* libc/stdio64/freopen64.c: Likewise.
+
 2013-03-15  Sebastian Huber <sebastian.huber@embedded-brains.de>
 
 	* newlib/libc/stdio/findfp.c (glue_with_file): New.
